--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.card-container {
+  padding: 4rem;
+  border-radius: 4px;
+}
