feat: update feature-create component to conditionally set selectedProduct based on edit mode

--- a/src/app/product/feature-create/feature-create.component.html
+++ b/src/app/product/feature-create/feature-create.component.html
@@ -22,7 +22,7 @@
     </div>
     } @else {
     <app-product-form
-      [selectedProduct]="currentProduct()"
+      [selectedProduct]="isEditMode() ? currentProduct() : null"
       (submitProduct)="onSubmitProduct($event)"
       (deleteProduct)="onDeleteProduct($event)"
     />
